Arrange the logic for JDK21 and panama.